Set the panels up

--- a/index.html
+++ b/index.html
@@ -10,10 +10,49 @@
   <!-- Link to external CSS stylesheet -->
   <link rel="stylesheet" href="styles.css">
 
+  <!-- Preconnect to improve font loading performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <!-- Link to Google Fonts (Oswald)-->
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+
   <!-- Page title for browser tab -->
   <title>Flexbox Panels Image Gallery</title>
 </head>
 <body>
+  <main>
+    <section class="panels">
+      <div class="panel panel1">
+        <p>Stop</p>
+        <p>Doubting</p>
+        <p>Yourself</p>
+      </div>
   
+      <div class="panel panel2">
+        <p>Make</p>
+        <p>Yourself</p>
+        <p>Proud</p>
+      </div>
+  
+      <div class="panel panel3">
+        <p>Fear</p>
+        <p>Kills</p>
+        <p>Growth</p>
+      </div>
+  
+      <div class="panel panel4">
+        <p>Change</p>
+        <p>Your</p>
+        <p>Thinking</p>
+      </div>
+  
+      <div class="panel panel5">
+        <p>Always</p>
+        <p>Dream</p>
+        <p>Big</p>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
