Added a class to middle words

--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
     <section class="panels">
       <div class="panel panel1">
         <p>Stop</p>
-        <p>Doubting</p>
+        <p class="special">Doubting</p>
         <p>Yourself</p>
       </div>
   
       <div class="panel panel2">
         <p>Make</p>
-        <p>Yourself</p>
+        <p class="special">Yourself</p>
         <p>Proud</p>
       </div>
   
       <div class="panel panel3">
         <p>Fear</p>
-        <p>Kills</p>
+        <p class="special">Kills</p>
         <p>Growth</p>
       </div>
   
       <div class="panel panel4">
         <p>Change</p>
-        <p>Your</p>
+        <p class="special">Your</p>
         <p>Thinking</p>
       </div>
   
       <div class="panel panel5">
         <p>Always</p>
-        <p>Dream</p>
+        <p class="special">Dream</p>
         <p>Big</p>
       </div>
     </section>
